[gd_scene load_steps=4 format=2]

[ext_resource path="res://Players_tuff/Player.png" type="Texture" id=1]
[ext_resource path="res://Players_tuff/PLAYER.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4 )

[node name="Player" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Hitbox1" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox1"]
visible = false
shape = SubResource( 1 )

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="area_entered" from="Hitbox1" to="." method="_on_Hitbox1_area_entered"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
